--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -52,6 +52,8 @@
             </p>
           </div>
         </div>
+      <% else %>
+        <input type="hidden"  name="admin" value="false" />  <!-- sets admin to false by default -->
       <% end %>
       <div class="col s3"> 
         <input type="submit" class="btn" value="Add User">
