--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -11,6 +11,7 @@
   <a href="/admin" class="normal-link col s12">Cancel</a>
 </div>
 
+<!-- js for materialize dropdown -->
 <script>
   $(document).ready(function() {
     $('select').material_select();
