--- a/app/assets/stylesheets/menu_admin.css
+++ b/app/assets/stylesheets/menu_admin.css
@@ -11,6 +11,7 @@ html, body, h1, h2, h3, h4, p, div, ul, ol, li {
 
 body {
   background-image: url("/assets/background.png");
+  background-image: image-url("<%= asset_path('background.png') %>");
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-position: 50% 50%;
