--- a/app/assets/stylesheets/menu_admin.css
+++ b/app/assets/stylesheets/menu_admin.css
@@ -10,7 +10,7 @@ html, body, h1, h2, h3, h4, p, div, ul, ol, li {
 }
 
 body {
-  background-image: url("/assets/background.png");
+  /*background-image: url("/assets/background.png");*/
   background-image: image-url("<%= asset_path('background.png') %>");
   background-attachment: fixed;
   background-repeat: no-repeat;
